--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:36:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:37:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -658,12 +658,12 @@ E (F)</td>
 -2 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
+      <td>Tiger Woods(W) +2
++3 thru 13</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td>Justin Thomas +2
+      <td class="greyout leftborder">Justin Thomas +2
 -2 thru 12</td>
-      <td class="greyout leftborder">Tiger Woods(W) +3
-+4 thru 12</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
@@ -710,8 +710,8 @@ Missed Cut</td>
 +1 (F)</td>
       <td>Justin Thomas +2
 -2 thru 12</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+4 thru 12</td>
+      <td class="greyout leftborder">Tiger Woods +2
++3 thru 13</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -746,6 +746,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith E
++4 thru 13</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Tiger Woods +2
++3 thru 13</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -796,22 +812,6 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 13</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Tiger Woods +3
-+4 thru 12</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">4</td>
       <td>Scottie Scheffler -5
@@ -857,6 +857,22 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 12</td>
+      <td>Tiger Woods +2
++3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
 +5 (F)</td>
     </tr>
     <tr>
@@ -906,22 +922,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 12</td>
-      <td>Tiger Woods +3
-+4 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
