--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:16:37 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:17:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,19 +157,19 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Scottie Scheffler -6
 -3 thru 13</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Tony Finau E
-+1 thru 13</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
+      <td>Justin Thomas(W) +1
 -3 thru 14</td>
-      <td class="greyout">Patrick Cantlay +1
+      <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
+      <td class="greyout">Tony Finau +1
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -177,7 +177,7 @@ E (F)</td>
       <td>Scottie Scheffler -6
 -3 thru 13</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Cameron Smith(W) -1
 +3 thru 16</td>
       <td>Patrick Cantlay +1
@@ -209,7 +209,7 @@ E (F)</td>
       <td>Scottie Scheffler -6
 -3 thru 13</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas(W) +1
@@ -271,7 +271,7 @@ E (F)</td>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-7</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Hideki Matsuyama -2
 -2 thru 14</td>
       <td>Cameron Smith(W) -1
@@ -287,7 +287,7 @@ E (F)</td>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-7</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Dustin Johnson(W) -2
 +1 (F)</td>
       <td>Corey Conners -1
@@ -383,7 +383,7 @@ E (F)</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-5</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Cameron Smith -1
 +3 thru 16</td>
       <td>Will Zalatoris -1
@@ -412,22 +412,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-5</td>
-      <td>Shane Lowry -3
--4 thru 17</td>
-      <td>Dustin Johnson(W) -2
-+1 (F)</td>
-      <td>Tony Finau E
-+1 thru 13</td>
-      <td>Matthew Fitzpatrick E
-+1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -6
@@ -442,6 +426,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Sam Burns +5
 +2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-4</td>
+      <td>Shane Lowry -3
+-4 (F)</td>
+      <td>Dustin Johnson(W) -2
++1 (F)</td>
+      <td>Matthew Fitzpatrick E
++1 (F)</td>
+      <td>Tony Finau +1
++2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -463,9 +463,9 @@ E (F)</td>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-3</td>
       <td>Shane Lowry(W) -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Joaquin Niemann -3
-E thru 15</td>
+E thru 16</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Viktor Hovland +4
@@ -527,7 +527,7 @@ E (F)</td>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Cameron Smith -1
 +3 thru 16</td>
       <td>Justin Thomas(W) +1
@@ -796,22 +796,6 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Tony Finau E
-+1 thru 13</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">3</td>
       <td>Dustin Johnson -2
@@ -831,7 +815,7 @@ E (F)</td>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">3</td>
       <td>Joaquin Niemann -3
-E thru 15</td>
+E thru 16</td>
       <td>Cameron Smith -1
 +3 thru 16</td>
       <td>Jon Rahm(W) +2
@@ -874,6 +858,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Tony Finau +1
++2 thru 14</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
