--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:16:37 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:17:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,28 +140,12 @@ body {
   </thead>
   <tbody>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler -6
--3 thru 13</td>
-      <td>Shane Lowry -3
--4 thru 17</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tony Finau E
-+1 thru 13</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
--3 thru 14</td>
-      <td class="greyout">Patrick Cantlay +1
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -6
 -3 thru 13</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Jon Rahm +2
@@ -170,6 +154,22 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -6
+-3 thru 13</td>
+      <td>Shane Lowry -3
+-4 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout">Tony Finau +1
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -191,7 +191,7 @@ E (F)</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-5</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Cameron Smith -1
 +3 thru 16</td>
       <td>Will Zalatoris -1
@@ -207,7 +207,7 @@ E (F)</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry -3
--4 thru 17</td>
+-4 (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas(W) +1
@@ -236,26 +236,10 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tony Finau E
-+1 thru 13</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td class="greyout leftborder">Daniel Berger +2
-+3 thru 17</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
-E thru 15</td>
+E thru 16</td>
       <td>Cameron Smith -1
 +3 thru 16</td>
       <td>Justin Thomas +1
@@ -266,6 +250,22 @@ E thru 15</td>
 E thru 17</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 14</td>
+      <td>Tony Finau +1
++2 thru 14</td>
+      <td class="greyout leftborder">Daniel Berger +2
++3 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -300,22 +300,6 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Tony Finau E
-+1 thru 13</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">2</td>
       <td>Corey Conners(W) -1
@@ -330,6 +314,22 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Tony Finau +1
++2 thru 14</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
