--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:20:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:21:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,19 +157,35 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -6
 -3 thru 14</td>
       <td>Shane Lowry -3
 -4 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Tony Finau +1
 +2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler -6
+-3 thru 14</td>
+      <td>Shane Lowry -3
+-4 (F)</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -202,22 +218,6 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -6
--3 thru 14</td>
-      <td>Shane Lowry -3
--4 (F)</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -380,6 +380,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-5</td>
+      <td>Hideki Matsuyama -3
+-3 thru 15</td>
+      <td>Cameron Smith(W) -1
++3 thru 17</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-5</td>
       <td>Shane Lowry -3
@@ -388,10 +404,10 @@ E (F)</td>
 +3 thru 17</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Matthew Fitzpatrick E
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
--3 thru 14</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -428,22 +444,6 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-4</td>
-      <td>Hideki Matsuyama -3
--3 thru 15</td>
-      <td>Cameron Smith(W) -1
-+3 thru 17</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td class="greyout leftborder">Marc Leishman +4
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-4</td>
       <td>Shane Lowry -3
@@ -458,6 +458,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -6
+-3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -476,6 +492,38 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-3</td>
+      <td>Shane Lowry -3
+-4 (F)</td>
+      <td>Cameron Smith -1
++3 thru 17</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-3</td>
+      <td>Hideki Matsuyama -3
+-3 thru 15</td>
+      <td>Cameron Smith -1
++3 thru 17</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td>Tiger Woods +1
++2 thru 16</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
++1 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-3</td>
       <td>Shane Lowry(W) -3
@@ -492,22 +540,6 @@ E thru 16</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -6
--3 thru 14</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -1
@@ -522,38 +554,6 @@ E (F)</td>
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-2</td>
-      <td>Shane Lowry -3
--4 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 17</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -3
--3 thru 15</td>
-      <td>Cameron Smith -1
-+3 thru 17</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td>Tiger Woods +1
-+2 thru 16</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +2
-+1 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -621,13 +621,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Cameron Smith -1
 +3 thru 17</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
@@ -637,15 +637,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
       <td>Tiger Woods(W) +1
 +2 thru 16</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
       <td class="greyout leftborder">Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout">Viktor Hovland +4
@@ -653,19 +653,51 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Scottie Scheffler -6
 -3 thru 14</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +7
 +5 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">0</td>
+      <td>Hideki Matsuyama -3
+-3 thru 15</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -700,44 +732,12 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -3
--3 thru 15</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Scottie Scheffler -6
 -3 thru 14</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Brooks Koepka +6
@@ -762,6 +762,38 @@ E (F)</td>
 E (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td>Tiger Woods +1
++2 thru 16</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith(W) -1
++3 thru 17</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -828,32 +860,16 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">3</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td>Tiger Woods +1
-+2 thru 16</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith(W) -1
-+3 thru 17</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -876,18 +892,66 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Daniel Berger +2
++3 thru 17</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">5</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">5</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td>Patrick Cantlay(W) +1
++3 (F)</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -924,36 +988,20 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">6</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Daniel Berger +2
-+3 thru 17</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">6</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -972,60 +1020,12 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">6</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">6</td>
-      <td>Patrick Cantlay(W) +1
-+3 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -1
 +3 thru 17</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td>Sam Burns +5
@@ -1053,9 +1053,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1069,9 +1069,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1085,9 +1085,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
