--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:20:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:21:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,22 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler -6
+-3 thru 14</td>
+      <td>Shane Lowry -3
+-4 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout">Tony Finau +1
++2 thru 14</td>
+    </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-10</td>
@@ -154,22 +170,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -6
--3 thru 14</td>
-      <td>Shane Lowry -3
--4 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout">Tony Finau +1
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -196,22 +196,22 @@ E (F)</td>
 +3 thru 17</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Matthew Fitzpatrick E
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
--3 thru 14</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Shane Lowry -3
 -4 (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -221,13 +221,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Sungjae Im -3
 +2 (F)</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
@@ -237,13 +237,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Joaquin Niemann -3
 E thru 16</td>
       <td>Cameron Smith -1
 +3 thru 17</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
@@ -253,13 +253,13 @@ E thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
       <td>Tony Finau +1
 +2 thru 14</td>
       <td class="greyout leftborder">Daniel Berger +2
@@ -269,13 +269,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Dustin Johnson -2
 +1 (F)</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
       <td>Russell Henley +3
 +2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W) +7
@@ -316,6 +316,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith(W) -1
++3 thru 17</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas E
+-4 thru 15</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">3</td>
       <td>Collin Morikawa -1
@@ -330,22 +346,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith(W) -1
-+3 thru 17</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 14</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -364,6 +364,22 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">7</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas(W) E
+-4 thru 15</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">8</td>
       <td>Collin Morikawa -1
@@ -378,22 +394,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Luke List +8
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">8</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 14</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
   </tbody>
 </table>
