--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:40:59 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 6:41:42 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -348,22 +348,6 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -7
--4 thru 15</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Adam Scott +1
--1 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -7
@@ -488,6 +472,22 @@ E (F)</td>
 +2 thru 17</td>
       <td class="greyout leftborder">Rory McIlroy(W) +2
 +1 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -7
+-4 thru 15</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Adam Scott +4
++2 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
